// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UsersForm /> renders create user 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailWrapper
    open={true}
  >
    <Styled(DetailHeader)
      text="Details"
    />
    <InputField
      componentType="input"
      disabled={false}
      id="frm-users-first-name"
      inputType="text"
      label="First Name"
      name="firstName"
    />
    <InputField
      componentType="input"
      disabled={false}
      id="frm-users-last-name"
      inputType="text"
      label="Last Name"
      name="lastName"
    />
    <InputField
      componentType="input"
      disabled={false}
      id="frm-users-external-id"
      inputType="text"
      label="External ID"
      name="externalId"
    />
    <InputField
      componentType="input"
      disabled={false}
      id="frm-users-work-station-id"
      inputType="text"
      label="Workstation ID"
      name="workStationId"
    />
  </DetailWrapper>
  <DetailWrapper
    open={true}
  >
    <Styled(DetailHeader)
      text="Login Information"
    />
    <InputField
      componentType="input"
      disabled={false}
      id="frm-users-email"
      inputType="text"
      label="Email *"
      name="email"
      required={true}
    />
    <SelectField
      disabled={false}
      id="frm-users-platform-role-id"
      label="Platform Role *"
      name="platformRoleId"
      options={Array []}
      required={true}
    />
    <SelectField
      disabled={false}
      id="frm-users-role-id"
      label="Tenant Role *"
      name="roleId"
      options={Array []}
      required={true}
    />
    <ToggleField
      disabled={false}
      id="frm-users-invite-now"
      label="Invite Now"
      name="inviteNow"
    />
  </DetailWrapper>
</form>
`;

exports[`<UsersForm /> renders update user 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailWrapper
    open={true}
  >
    <Styled(DetailHeader)
      text="Details"
    />
    <InputField
      componentType="input"
      disabled={false}
      id="frm-users-first-name"
      inputType="text"
      label="First Name"
      name="firstName"
    />
    <InputField
      componentType="input"
      disabled={false}
      id="frm-users-last-name"
      inputType="text"
      label="Last Name"
      name="lastName"
    />
    <InputField
      componentType="input"
      disabled={false}
      id="frm-users-external-id"
      inputType="text"
      label="External ID"
      name="externalId"
    />
    <InputField
      componentType="input"
      disabled={false}
      id="frm-users-work-station-id"
      inputType="text"
      label="Workstation ID"
      name="workStationId"
    />
  </DetailWrapper>
  <DetailWrapper
    open={true}
  >
    <Styled(DetailHeader)
      text="Login Information"
    />
    <InputField
      componentType="input"
      disabled={false}
      id="frm-users-email"
      inputType="text"
      label="Email *"
      name="email"
      required={true}
    />
    <SelectField
      disabled={false}
      id="frm-users-platform-role-id"
      label="Platform Role *"
      name="platformRoleId"
      options={Array []}
      required={true}
    />
    <SelectField
      disabled={false}
      id="frm-users-role-id"
      label="Tenant Role *"
      name="roleId"
      options={Array []}
      required={true}
    />
    <ToggleField
      disabled={false}
      id="frm-users-invite-now"
      label="Invite Now"
      name="inviteNow"
    />
  </DetailWrapper>
</form>
`;

exports[`<UsersForm /> renders update user saving and inherited 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailWrapper
    open={true}
  >
    <Styled(DetailHeader)
      text="Details"
    />
    <InputField
      componentType="input"
      disabled={true}
      id="frm-users-first-name"
      inputType="text"
      label="First Name"
      name="firstName"
    />
    <InputField
      componentType="input"
      disabled={true}
      id="frm-users-last-name"
      inputType="text"
      label="Last Name"
      name="lastName"
    />
    <InputField
      componentType="input"
      disabled={true}
      id="frm-users-external-id"
      inputType="text"
      label="External ID"
      name="externalId"
    />
    <InputField
      componentType="input"
      disabled={true}
      id="frm-users-work-station-id"
      inputType="text"
      label="Workstation ID"
      name="workStationId"
    />
  </DetailWrapper>
  <DetailWrapper
    open={true}
  >
    <Styled(DetailHeader)
      text="Login Information"
    />
    <InputField
      componentType="input"
      disabled={true}
      id="frm-users-email"
      inputType="text"
      label="Email *"
      name="email"
      required={true}
    />
    <SelectField
      disabled={true}
      id="frm-users-platform-role-id"
      label="Platform Role *"
      name="platformRoleId"
      options={Array []}
      required={true}
    />
    <SelectField
      disabled={true}
      id="frm-users-role-id"
      label="Tenant Role *"
      name="roleId"
      options={Array []}
      required={true}
    />
    <ToggleField
      disabled={true}
      id="frm-users-invite-now"
      label="Invite Now"
      name="inviteNow"
    />
  </DetailWrapper>
</form>
`;

exports[`<UsersForm /> renders update user without update permision 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailWrapper
    open={true}
  >
    <Styled(DetailHeader)
      text="Details"
    />
    <InputField
      componentType="input"
      disabled={true}
      id="frm-users-first-name"
      inputType="text"
      label="First Name"
      name="firstName"
    />
    <InputField
      componentType="input"
      disabled={true}
      id="frm-users-last-name"
      inputType="text"
      label="Last Name"
      name="lastName"
    />
    <InputField
      componentType="input"
      disabled={true}
      id="frm-users-external-id"
      inputType="text"
      label="External ID"
      name="externalId"
    />
    <InputField
      componentType="input"
      disabled={true}
      id="frm-users-work-station-id"
      inputType="text"
      label="Workstation ID"
      name="workStationId"
    />
  </DetailWrapper>
  <DetailWrapper
    open={true}
  >
    <Styled(DetailHeader)
      text="Login Information"
    />
    <InputField
      componentType="input"
      disabled={true}
      id="frm-users-email"
      inputType="text"
      label="Email *"
      name="email"
      required={true}
    />
    <SelectField
      disabled={true}
      id="frm-users-platform-role-id"
      label="Platform Role *"
      name="platformRoleId"
      options={Array []}
      required={true}
    />
    <SelectField
      disabled={true}
      id="frm-users-role-id"
      label="Tenant Role *"
      name="roleId"
      options={Array []}
      required={true}
    />
    <ToggleField
      disabled={true}
      id="frm-users-invite-now"
      label="Invite Now"
      name="inviteNow"
    />
  </DetailWrapper>
</form>
`;
